# PicoCalc-Info

./: .gitignore  LICENSE.rst  README.md  README.rst  make.bat  pyproject.toml
docs/: LICENSE.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/Boards/: index.html  luckfox_lyra.html
docs/_sources/: index.rst.txt
source/: LICENSE.rst  conf.py  index.rst
source/Boards/: index.rst  luckfox_lyra.rst
