[project]
name = "picocalc-info"
version = "0.1.0"
description = "Cloection of information links and projects for the ClockworkPi PicoCalc."
authors = [
    {name = "Bryan McWhirt"}
]
license = {text = "CC-BY-NC-SA"}
readme = "README.rst"
requires-python = ">=3.11,<4.0"
dependencies = [
    "furo (>=2024.8.6,<2025.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
autopep8 = "^2.3.2"
pep8 = "^1.7.1"
mypy = "^1.16.1"
pandas-stubs = "^2.2.3.250527"
changelog-pre-commit = "^0.1.0"
coverage = "^7.9.1"
esbonio = "^0.16.5"
flake8 = "^7.3.0"
flake8-isort = "^6.1.2"
mccabe = "^0.7.0"
pylint = "^3.3.7"
pylint-mccabe = "^0.1.3"
pylint-utils = "^0.6.0"
pylint-junit = "^0.3.5"
pre-commit-hooks = "^5.0.0"
pre-commit-copyright = "^0.1.4"
pydocstyle = "^6.3.0"
pycodestyle = "^2.14.0"
pytest = "^8.4.1"
pytest-black = "^0.6.0"
pytest-cov = "^6.2.1"
pytest-dotenv = "^0.5.2"
pytest-flakes = "^4.0.5"
pytest-isort = "^4.0.0"
pytest-mccabe = "^2.0"
pytest-pep8 = "^1.0.6"
pytest-pydocstyle = "^2.4.0"
pytest-sphinx = "^0.6.3"
pygments = "^2.19.2"
pygments-pre-commit = "^2.3.0"
toml = "^0.10.2"
tomli = "^2.2.1"
tomlkit = "^0.13.3"
sphinx = "^8.2.3"
sphinx-contributors = "^0.2.7"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.1"
sphinx-toolbox = "^4.0.0"
sphinx-lint = "^1.0.0"
poetry = "^2.1.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
